// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/form/contact should render a success message 1`] = `
<div
  className="m-article__text"
  id="m-form--contact-success"
  itemProp="text"
>
  <h3
    className="is-centered c-type--h3"
  />
  <div
    className="m-article__description is-centered"
    itemProp="description"
  >
    <p
      className="c-type--p"
    />
    <p
      className="c-type--p"
    >
      <a
        aria-current={null}
        className="c-btn is-centered c-btn--large"
        href="/contact"
        onClick={[Function]}
        role="button"
        title="btnRenewTitle"
        type={null}
      >
        <span
          className="c-btn__label"
        >
          btnRenewLabel
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`common/component/module/form/contact should render an error message 1`] = `
<div
  className="m-article__text"
  id="m-form--contact-success"
  itemProp="text"
>
  <h3
    className="is-centered c-type--h3"
  />
  <div
    className="m-article__description is-centered"
    itemProp="description"
  >
    <p
      className="c-type--p"
    />
    <p
      className="c-type--p"
    >
      <a
        aria-current={null}
        className="c-btn is-centered c-btn--large"
        href="/contact"
        onClick={[Function]}
        role="button"
        title=""
        type={null}
      >
        <span
          className="c-btn__label"
        />
      </a>
    </p>
  </div>
</div>
`;

exports[`common/component/module/form/contact should render correctly 1`] = `
<form
  acceptCharset="utf-8"
  action="/contact/"
  className="m-form m-form--contact"
  id="m-form--contact"
  itemProp="potentialAction"
  itemScope={true}
  itemType="http://schema.org/CommunicateAction"
  method="post"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="form"
>
  <fieldset
    className="m-form__fieldset"
  >
    <legend
      className="m-form__legend is-visually-hidden"
    >
      legend
    </legend>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group"
        >
          <input
            aria-required={true}
            className="m-form__control--text"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="name"
          >
            inputName
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group"
        >
          <input
            aria-required={true}
            className="m-form__control--text"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="email"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="email"
          >
            inputEmail
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--12"
      >
        <div
          className="m-form__group"
        >
          <input
            aria-required={true}
            className="m-form__control--text"
            id="subject"
            name="subject"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="subject"
          >
            inputSubject
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--12"
      >
        <div
          className="m-form__group"
        >
          <textarea
            aria-required={true}
            className="m-form__control--textarea"
            cols="50"
            id="message"
            name="message"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            rows="4"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="message"
          >
            inputMessage
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group m-form__group--reset hide-on-print"
        >
          <button
            className="c-btn m-form__btn c-btn--secondary"
            id="reset"
            name="reset"
            role="button"
            title="btnResetTitle"
            type="reset"
          >
            <span
              className="c-btn__label"
            >
              btnResetLabel
            </span>
          </button>
        </div>
      </div>
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group m-form__group--submit hide-on-print"
        >
          <button
            className="c-btn m-form__btn c-btn--submit c-btn--primary is-disabled"
            disabled="disabled"
            id="submit"
            name="submit"
            role="button"
            title="btnSubmitTitle"
            type="submit"
          >
            <span
              className="c-btn__label"
            >
              btnSubmitLabel
            </span>
          </button>
        </div>
      </div>
    </div>
    <input
      name="_csrf"
      type="hidden"
      value="da39a3ee5e6b4b0d3255bfef95601890afd80709"
    />
  </fieldset>
</form>
`;

exports[`common/component/module/form/contact should render correctly 2`] = `
<form
  acceptCharset="utf-8"
  action="/contact/"
  className="m-form m-form--contact"
  id="m-form--contact"
  itemProp="potentialAction"
  itemScope={true}
  itemType="http://schema.org/CommunicateAction"
  method="post"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="form"
>
  <fieldset
    className="m-form__fieldset"
  >
    <legend
      className="m-form__legend is-visually-hidden"
    >
      legend
    </legend>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group"
        >
          <input
            aria-required={true}
            className="m-form__control--text"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="name"
          >
            inputName
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group"
        >
          <input
            aria-required={true}
            className="m-form__control--text"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="email"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="email"
          >
            inputEmail
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--12"
      >
        <div
          className="m-form__group"
        >
          <input
            aria-required={true}
            className="m-form__control--text"
            id="subject"
            name="subject"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="subject"
          >
            inputSubject
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--12"
      >
        <div
          className="m-form__group"
        >
          <textarea
            aria-required={true}
            className="m-form__control--textarea"
            cols="50"
            id="message"
            name="message"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            rows="4"
            value=""
          />
          <label
            className="m-form__label"
            htmlFor="message"
          >
            inputMessage
            <i
              aria-hidden="true"
              className="c-font-icon--sad m-form__label__icon--error"
            />
            <i
              aria-hidden="true"
              className="c-font-icon--smile m-form__label__icon--success"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="l-grid__row"
    >
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group m-form__group--reset hide-on-print"
        >
          <button
            className="c-btn m-form__btn c-btn--secondary"
            id="reset"
            name="reset"
            role="button"
            title="btnResetTitle"
            type="reset"
          >
            <span
              className="c-btn__label"
            >
              btnResetLabel
            </span>
          </button>
        </div>
      </div>
      <div
        className="l-grid__col--6"
      >
        <div
          className="m-form__group m-form__group--submit hide-on-print"
        >
          <button
            className="c-btn m-form__btn c-btn--submit c-btn--primary is-disabled"
            disabled="disabled"
            id="submit"
            name="submit"
            role="button"
            title="btnSubmitTitle"
            type="submit"
          >
            <span
              className="c-btn__label"
            >
              btnSubmitLabel
            </span>
          </button>
        </div>
      </div>
    </div>
    <input
      name="_csrf"
      type="hidden"
      value="da39a3ee5e6b4b0d3255bfef95601890afd80709"
    />
  </fieldset>
</form>
`;
